--- a/python/src/LinearModelResult_doc.i.in
+++ b/python/src/LinearModelResult_doc.i.in
@@ -241,12 +241,12 @@ Model selection can lead to a sparse model.
 
 Returns
 -------
-involvesModelSelection: bool
+involvesModelSelection : bool
     True if the method involves a model selection method."
 
 // ---------------------------------------------------------------------
 
-%feature("docstring") OT::LinearModelResult::setIsModelSelection
+%feature("docstring") OT::LinearModelResult::setInvolvesModelSelection
 "Set the model selection flag.
 
 A model selection method can be used to select the coefficients
@@ -255,5 +255,5 @@ Model selection can lead to a sparse model.
 
 Parameters
 ----------
-involvesModelSelection: bool
+involvesModelSelection : bool
     True if the method involves a model selection method."
