Doc: boolean->bool

--- a/python/src/DistributionImplementation_doc.i.in
+++ b/python/src/DistributionImplementation_doc.i.in
@@ -1301,7 +1301,7 @@ Parameters
 ----------
 alpha : float, :math:`\alpha \in [0,1]`
     The confidence level.
-tail : boolean
+tail : bool
     `True` indicates the interval is bounded by an lower value.
     `False` indicates the interval is bounded by an upper value.
     Default value is `False`.
@@ -1357,7 +1357,7 @@ Parameters
 ----------
 alpha : float, :math:`\alpha \in [0,1]`
     The confidence level.
-tail : boolean
+tail : bool
     `True` indicates the interval is bounded by an lower value.
     `False` indicates the interval is bounded by an upper value.
     Default value is `False`.
