--- a/python/src/OrthogonalDirection_doc.i.in
+++ b/python/src/OrthogonalDirection_doc.i.in
@@ -1,14 +1,16 @@
 %feature("docstring") OT::OrthogonalDirection
-"Sampling following the orthogonal direction strategy.
+"Directions sampling following the orthogonal direction strategy.
 
 Parameters
 ----------
 dimension : int
-    The dimension of the standard space. By default, :math:`dimension = 0` but
-    automatically updated by the calling class.
+    The dimension of the standard space.
+    
+    By default, :math:`dimension = 0` but automatically updated by the calling class.
 k : int
-    The number of elements in the linear combinations. By default,
-    :math:`k = 1` but automatically updated by the calling class.
+    The number of elements in the linear combinations.
+    
+    By default, :math:`k = 1` but automatically updated by the calling class.
 
 See also
 --------
@@ -16,23 +18,29 @@ RandomDirection
 
 Notes
 -----
-This strategy is parameterized by :math:`k \in \{1, \ldots, n\}`, where :math:`n` is
-the dimension of the input random vector :math:`\vect{X}`. We generate one
-direct orthonormalized basis :math:`(\vect{e}_1, \ldots, \vect{e}_n)` uniformly distributed in
-the set of direct orthonormal bases. We consider all the normalized linear
-combinations of :math:`k` vectors chosen within the :math:`n` vectors of the basis, where
-the coefficients of the linear combinations are in :math:`\{+1, -1\}`. This
-generates :math:`\binom{k}{n} 2^k` new vectors :math:`\vect{v}_i`. We sample according
-to all the directions defined by the vectors :math:`\vect{v}_i`.
+The orthogonal direction strategy is parameterized by :math:`k \in \{1, \ldots, \inputDim\}`, where :math:`\inputDim` is
+the dimension of the standard space. We generate some directions in the standard space according to the following steps:
 
-If :math:`k = 1`, we consider all the axes of the standard space."
+- one direct orthonormalized basis :math:`(\vect{e}_1, \ldots, \vect{e}_\inputDim)` uniformly distributed in
+  the set of direct orthonormal bases;
+- we consider all the normalized linear combinations of :math:`k` vectors chosen within the :math:`\inputDim` vectors
+  of the basis, where the coefficients of the linear combinations are in :math:`\{+1, -1\}`.
+
+Thus, this process generates :math:`\binom{k}{\inputDim} 2^k` directions.
+
+If :math:`k = 1`, we consider all the axes of the space, i.e. :math:`\inputDim` directions."
 
 // ---------------------------------------------------------------------
 
 %feature("docstring") OT::OrthogonalDirection::generate
-"Generate the sample.
+"Generate the directions.
 
 Returns
 -------
 sample : :class:`~openturns.Sample`
-    The sample generated according to the orthogonal direction strategy."
+    The :math:`\binom{k}{\inputDim} 2^k` directions generated according to the strategy.
+    
+Notes
+-----
+The sample is the collection of the :math:`\binom{k}{\inputDim} 2^k` points on the unit sphere in the standard space
+associated to the generated directions."
