--- a/python/src/RandomDirection_doc.i.in
+++ b/python/src/RandomDirection_doc.i.in
@@ -1,10 +1,12 @@
 %feature("docstring") OT::RandomDirection
-"Sampling following the random direction strategy.
+"Directions sampling following the random direction strategy.
 
 Parameters
 ----------
 dimension : int
-    The dimension of the standard space. By default, :math:`dimension = 0` but
+    The dimension of the standard space.
+    
+    By default, :math:`dimension = 0` but
     automatically updated by the calling class.
 
 See also
@@ -13,17 +15,25 @@ OrthogonalDirection
 
 Notes
 -----
-The RandomDirection strategy is the following : we generate some points on the
-sphere unity in the standard space according to the uniform distribution and we
-consider both opposite directions so built."
+The random direction strategy generates some directions in the standard space according to the following steps:
+
+- we generate some points on the sphere unity in the standard space according to the uniform distribution,
+- we consider both opposite directions so built.
+
+Thus, this process generates 2 directions."
 
 // ---------------------------------------------------------------------
 
 %feature("docstring") OT::RandomDirection::generate
-"Generate the sample.
+"Generate the directions.
 
 Returns
 -------
 sample : :class:`~openturns.Sample`
-    The sample generated in two opposite random directions."
+    Both directions generated  according to the strategy.
+    
+Notes
+-----
+The sample is the collection of the points on the unit sphere in the standard space
+associated to the generated directions."
 
