Taken into account Regis remarks.

--- a/python/src/BernsteinCopulaFactory_doc.i.in
+++ b/python/src/BernsteinCopulaFactory_doc.i.in
@@ -8,16 +8,15 @@ the copula of a multivariate distribution.
 
 The keys of :class:`~openturns.ResourceMap` related to the class are:
 
-- the keys `BernsteinCopulaFactory-MinM` and `BernsteinCopulaFactory-MaxM` that define the default range of :math:`m` in the optimization
+- the keys `BernsteinCopulaFactory-MinM` and `BernsteinCopulaFactory-MaxM` that define the range of :math:`m`
+  in the optimization
   problems computing the optimal bin number according to a specified criteria,
-- the key `BernsteinCopulaFactory-BinNumberSelection` that defines the default criteria to compute the optimal bin number when it is not
-  specified,
+- the key `BernsteinCopulaFactory-BinNumberSelection` that defines the  criteria to compute the optimal bin number
+  when it is not specified. The possible choices are 'AMISE', 'LogLikelihood', 'PenalizedCsiszarDivergence';
 - the key `BernsteinCopulaFactory-KFraction` that defines the fraction of the sample used for the validation in the
   method :meth:`ComputeLogLikelihoodBinNumber`,
 - the key `BernsteinCopulaFactory-SamplingSize`  that defines the :math:`N` parameter used in the
   method :meth:`ComputePenalizedCsiszarDivergenceBinNumber`.
-
-
 
 See also
 --------
