--- a/python/src/PostAnalyticalControlledImportanceSampling_doc.i.in
+++ b/python/src/PostAnalyticalControlledImportanceSampling_doc.i.in
@@ -28,18 +28,19 @@ The post analytical controlled importance sampling algorithm estimates the proba
         = \int_{\Rset^{\inputDim}} \mathbf{1}_{\{\model(\vect{x}) \leq 0 \}}\inputMeasure(\vect{x})\di{\vect{x}}
 
 
-The post analytical controlled importance sampling algorithm is an accelerated sampling method, which is
-performed in the standard space, where the random variates are independent and follow the standard distribution
-(which is a normal distribution or an elliptical distribution depending on which transformation between Nataf
-and Rosenblatt has been used: see  :ref:`isoprobabilistic_transformation` to get more details).
-It is an additive correction of the :class:`~openturns.FORM` approximation of the probability :math:`P_f`. See
+The post analytical controlled importance sampling algorithm is  a variance reduction sampling
+method, which is
+performed in the standard space, where the random vector follows a spherical distribution (see
+:ref:`isoprobabilistic_transformation` to get more details).
+It is an additive correction of the :class:`~openturns.FORM` approximation of the probability
+:math:`P_f`. See
 :class:`~openturns.Analytical` for the description of the first steps of the FORM analysis.
 
-Let :math:`Z` be the scalar random variate defined from the standard random vector :math:`\vect{U}` in the standard space, by: 
+Let :math:`\ell` be the function defined by: 
 
 .. math::
 
-    Z(\vect{U}) = \vect{u}^*.\vect{U} - \beta^2
+    \ell(\vect{u}) = \vect{u}^*.\vect{u} - \beta^2
 
 where :math:`\vect{u}^*` is the design point in the standard space, and :math:`\beta` the distance
 of the design point from the origin of the standard space: :math:`\beta = \| \vect{u}^*\|`.
@@ -48,41 +49,68 @@ The tangent hyperplan at the design point in the standard space is defined by th
 
 .. math::
 
-    Z = 0
+    \{ \vect{u} \in \Rset^{\inputDim} \, | \,  \ell(\vect{u}) = 0 \}
 
-Let :math:`G` be the model in the standard space: if :math:`T` is the iso-probabilistic
+Let :math:`G: \Rset^\inputDim \rightarrow \Rset` be the model in the standard space: if :math:`T` is the iso-probabilistic
 transformation such that :math:`T(\vect{X}) = \vect{U}`, then:
 
 .. math::
 
    G(\vect{u}) = \model \circ T^{-1}(\vect{u})
 
-We assume that the domain :math:`\cD_f` does not contain the origin of the standard space. Thus, we get:
+We assume that the domain :math:`\cD_f` does not contain the origin of the standard space. Thus, we
+get:
 
 .. math::
 
-    P_f & = \Prob{Z \geq 0} + \Prob{Z \leq 0,  G(\RVU) \leq 0} - \Prob{Z \geq 0,  G(\RVU) \geq 0}\\
-        & = \Prob{Z \geq 0} + \delta_1 - \delta_2
+    \cD_f & = \{\vect{u} \in \Rset^{\inputDim} \, | \,   G(\vect{u}) \leq 0  \} \\
+          & = \{\vect{u} \in \Rset^{\inputDim} \, | \,   \ell(\vect{u}) \geq 0  \} \cup
+          \{\vect{u} \in \Rset^{\inputDim} \, | \,   \ell(\vect{u}) \leq 0 , G(\vect{u}) \leq 0 \}
+          \setminus
+          \{\vect{u} \in \Rset^{\inputDim} \, | \,   \ell(\vect{u}) \geq 0 , G(\vect{u}) \geq 0 \}
 
-where :math:`\Prob{Z \geq 0} = E(-\beta)` is the FORM approximation around the design point with
-:math:`E` the univariate standard CDF of the standard distribution in the standard space.
+Then we have:
 
-If the FORM approximation is correct, then we have :math:`\delta_1 \ll \Prob{Z \geq 0}` and
-:math:`\delta_2 \ll \Prob{Z \geq 0}`. Thus, in order to estimate the probability :math:`P_f`,
-we use :math:`Z` as a controlled
+.. math::
+
+    P_f & = \Prob{\ell(\vect{U}) \geq 0} + \Prob{\ell(\vect{U}) \leq 0,  G(\RVU) \leq 0} -
+    \Prob{\ell(\vect{U}) \geq 0,  G(\RVU) \geq 0}\\
+        & = \Prob{\ell(\vect{U}) \geq 0} + \delta_1 - \delta_2
+
+where :math:`\Prob{\ell(\vect{U} \geq 0} = E(-\beta)` is known exactly. :math:`E` is the univariate
+standard CDF of the spherical distribution in the standard space.
+
+If :math:`\delta_1 \ll \Prob{\ell(\vect{U} \geq 0}`
+and :math:`\delta_2 \ll \Prob{\ell(\vect{U} \geq 0}`, then we use :math:`\ell(\vect{U})` as a
+controlled
 variable and we use an importance sampling around the design point in the standard space.
 
-We denote by :math:`(\vect{u}_i)_{1 \leq i \leq \sampleSize}` a sample generated from the standard distribution
-centered on the origin of the standard space, whose pdf is denoted by :math:`e`. Let :math:`e^*` be the pdf of the
-standard distribution centered on the design point :math:`\vect{u}^*`.
+We denote by :math:`(\vect{u}_i)_{1 \leq i \leq \sampleSize}` a sample generated from the spherical
+distribution
+centered on the origin of the standard space, whose pdf is denoted by :math:`e`. Let :math:`e^*` be
+the pdf of the
+spherical distribution centered on the design point :math:`\vect{u}^*`.
 
 The estimate of :math:`P_f` is defined by:
 
 .. math::
 
-    \tilde{P}_f =  E(-\beta) + \dfrac{1}{\sampleSize} \sum_{i=1}^\sampleSize \left( 1_{ \left \{ z_i \leq 0,
-    G(\vect{u}_i)  \leq 0 \right\} } - 1_{ \left \{ z_i \geq 0,  G(\vect{u}_i)  \geq
+    \tilde{P}_f & =  E(-\beta) + \tilde{\delta}_1 - \tilde{\delta}_2\\
+                & = E(-\beta) + \dfrac{1}{\sampleSize} \sum_{i=1}^\sampleSize \left( 1_{ \left \{ \ell(\vect{u})_i \leq 0,
+    G(\vect{u}_i)  \leq 0 \right\} } - 1_{ \left \{ \ell(\vect{u})_i \geq 0,  G(\vect{u}_i)  \geq
     0\right \} } \right) \dfrac{e(\vect{u}_i)}{e^*(\vect{u}_i)}
+
+The hypotheses :math:`\delta_1 \ll \Prob{\ell(\vect{U} \geq 0}`
+and :math:`\delta_2 \ll \Prob{\ell(\vect{U} \geq 0}` are verified if the FORM
+approximation is valid.
+
+The coefficient of variation of :math:`\tilde{P}_f` is:
+
+.. math::
+
+    \Cov{\tilde{P}_f}  = \dfrac{ \sqrt{ \Var{ \tilde{P}_f}}}{\Expect{\tilde{P}_f}} 
+                      = \dfrac{ \sqrt{ \Var{ \tilde{\delta}_1 - \tilde{\delta}_2 } }}
+                     { E(-\beta) + \Expect{\tilde{\delta}_1 - \tilde{\delta}_2} } \ll  \dfrac{ \sqrt{ \Var{ \tilde{\delta}_1 - \tilde{\delta}_2 } } } {\Expect{\tilde{\delta}_1 - \tilde{\delta}_2}}
 
 See also
 --------
