Improved doc P1LagrangeEvaluation
Fixed a typo

--- a/python/src/P1LagrangeEvaluation_doc.i.in
+++ b/python/src/P1LagrangeEvaluation_doc.i.in
@@ -1,5 +1,5 @@
 %feature("docstring") OT::P1LagrangeEvaluation
-"Data based math evaluation implementation.
+"Evaluation of a P1 Lagrange interpolation over a field.
 
 Available constructors:
 
