--- a/python/src/DirectionalSampling_doc.i.in
+++ b/python/src/DirectionalSampling_doc.i.in
@@ -1,5 +1,5 @@
 %feature("docstring") OT::DirectionalSampling
-"Directional simulation.
+"Directional sampling algorithm.
 
 Refer to :ref:`directional_simulation`.
 
@@ -13,61 +13,87 @@ Parameters
 event : :class:`~openturns.RandomVector`
     Event we are computing the probability of.
 rootStrategy : :class:`~openturns.RootStrategy`
-    Strategy adopted to evaluate the intersections of each direction with the
-    limit state function and take into account the contribution of the
-    direction to the event probability. By default,
-    *rootStrategy = ot.RootStrategy(ot.SafeAndSlow())*.
+    Strategy used to evaluate the frontiers of
+    the event along each direction in the standard space.
+
+    By default :class:`~openturns.SafeAndSlow`.
 samplingStrategy : :class:`~openturns.SamplingStrategy`
-    Strategy adopted to sample directions. By default,
-    *samplingStrategy=ot.SamplingStrategy(ot.RandomDirection())*.
+    Strategy used to sample directions in the standard space.
+
+    By default :class:`~openturns.RandomDirection`.
 
 Notes
 -----
-Using the probability distribution of a random vector :math:`\vect{X}`, we seek
-to evaluate the following probability:
+Let :math:`\inputRV` be a random vector of dimension :math:`\inputDim`, distributed according to
+the measure :math:`\inputMeasure`, and :math:`\model: \Rset^\inputDim \rightarrow \Rset`
+be the *limit state function* (where we only wrote the random input parameters). We define the event
+:math:`\cD_f` by:
 
 .. math::
 
-    P_f = \int_{\Rset^{n_X}} \mathbf{1}_{\{g(\ux,\underline{d}) \leq 0 \}}f_{\uX}(\ux)\di{\ux}
-        = \Prob{g\left( \vect{X},\vect{d} \right) \leq 0}
+    \cD_f = \{\vect{x} \in \Rset^{\inputDim} \, | \,\model(\vect{x}) \leq 0\}
 
-Here, :math:`\vect{X}` is a random vector, :math:`\vect{d}` a deterministic
-vector, :math:`g(\vect{X},\vect{d})` the function known as *limit state function*
-which enables the definition of the event
-:math:`\cD_f = \{\vect{X} \in \Rset^n \, | \, g(\vect{X},\vect{d}) \le 0\}`.
-:math:`\mathbf{1}_{ \left\{ g(\vect{x}_i,\vect{d}) \leq 0 \right\} }`
-describes the indicator function equal to 1 if
-:math:`g(\vect{x}_i,\vect{d}) \leq 0` and equal to 0 otherwise.
+The directional sampling algorithm estimates the probability of the event :math:`\cD_f`:
 
-The directional simulation method is an accelerated sampling method. It implies
-a preliminary iso-probabilistic transformation, as for :class:`~openturns.FORM`
-and :class:`~openturns.SORM` methods; however, it remains based on sampling and
-is thus not an approximation method.
-In the transformed space, the (transformed) uncertain variables :math:`\vect{U}`
-are independent standard gaussian variables (mean equal to zero and standard
-deviation equal to 1).
+.. math::
 
-Roughly speaking, each simulation of the directional simulation algorithm is
-made of three steps. For the :math:`i^\textrm{th}` iteration, these steps are
-the following:
+    P_f = \Prob{\model\left( \inputRV \right) \leq 0}
+        = \int_{\Rset^{\inputDim}} \mathbf{1}_{\{\model(\vect{x}) \leq 0 \}}\inputMeasure(\vect{x})\di{\vect{x}}
 
-- Let :math:`\cS = \big\{ \vect{u} \big| ||\vect{u}|| = 1 \big\}`. A point
-  :math:`P_i` is drawn randomly on :math:`\cS` according to an uniform
-  distribution.
 
-- In the direction starting from the origin and passing through :math:`P_i`,
-  solutions of the equation :math:`g(\vect{X},\vect{d}) = 0` (i.e. limits of
-  :math:`\cD_f`) are searched. The set of values of :math:`\vect{u}` that
-  belong to :math:`\cD_f` is deduced for these solutions: it is a subset
-  :math:`I_i \subset \Rset`.
+The directional sampling algorithm is a variance reduction sampling method. As it is performed
+in the standard space, it uses the iso-probabilistic transformation associated to :math:`\inputMeasure` (see  :ref:`isoprobabilistic_transformation` to get more details).
 
-- Then, one calculates the probability :math:`q_i = \Prob{ ||\vect{U}|| \in I_i }`.
-  By property of independent standard variable, :math:`||\vect{U}||^2` is a
-  random variable distributed according to a chi-square distribution, which
-  makes the computation effortless.
+Let :math:`T` be the iso-probabilistic transformation: :math:`T(\vect{X}) = \vect{Z}`. The
+random vector :math:`\vect{Z}` follows a spherical distribution, which means that it is written
+as:
 
-Finally, the estimate of the probability :math:`P_f` after :math:`N` simulations
-is the following:
+.. math::
+
+    \vect{Z} = R \vect{U}
+
+where :math:`R` is a scalar random variable following the radial distribution, :math:`\vect{U}` is a random
+vector that follows the uniform distribution on the unit sphere of dimension :math:`\inputDim`, 
+denoted by :math:`\cS_\inputDim`, and :math:`(R, \vect{U})` are independent.
+
+Then the probability :math:`P_f` can be written as:
+
+.. math::
+
+    P_f & = \dfrac{1}{|\cS_\inputDim|} \int_{\cS_\inputDim} \left \{ \int_{\Rset^+} 1_{\left\{\model \circ T^{-1}(r\vect{u}) \leq 0 \right\}} p_R(r) dr \right\} \, d\vect{u} \\
+
+For a given direction :math:`\vect{u}`, let :math:`I_{\vect{u}}` be:
+
+.. math::
+
+   I_{\vect{u}} = \{r \in \Rset^+ \, | \, \model \circ T^{-1}(r\vect{u})\leq 0 \}
+
+Then, we have: 
+
+.. math::
+
+    \int_{\Rset^+} 1_{\left\{\model \circ T^{-1}(r\vect{u}) \leq 0\right\}} p_R(r) dr = \Prob{R \in I_{\vect{u}}}
+    
+As the radial distribution of :math:`R` is known, we can evaluate exactly  the probability :math:`\Prob{R \in I_{\vect{u}}}` as soon as we know the direction :math:`\vect{u}`.
+
+The integral with respect to the directions is evaluated using a sampling method, defined by the
+class:`~openturns.SamplingStrategy`.
+
+The directional sampling algorithm follows the steps:
+
+- A sample is generated from the uniform distribution on 
+  :math:`\cS_\inputDim`: from this sample, some directions are defined, according to the
+  specified :class:`~openturns.SamplingStrategy`. We denote by :math:`(\vect{u}_i)` the sample of the directions;
+
+- Along each direction :math:`i`, we find the frontiers of :math:`\cD_f`, i.e. the solutions
+  of :math:`\model \circ T^{-1}(r\vect{u}_i) = 0` according to the :class:`~openturns.RootStrategy`.
+  From these solutions, we deduce the subset :math:`I_i \subset \Rset^+` that belongs to
+  :math:`\cD_f`;
+
+- For each subset :math:`I_i`, we compute the probability
+  :math:`q_i = \Prob{R \in I_{\vect{u}_i}}`.
+
+The probability :math:`P_f` is computed from all the  :math:`q_i` probabilities. If :math:`N` directions have been used, then:
 
 .. math::
 
@@ -77,20 +103,29 @@ Examples
 --------
 >>> import openturns as ot
 >>> ot.RandomGenerator.SetSeed(0)
+
+Create the output random vector :math:`Y = \model(\inputRV)`:
+
 >>> myFunction = ot.SymbolicFunction(['E', 'F', 'L', 'I'], ['-F*L^3/(3*E*I)'])
 >>> myDistribution = ot.Normal([50.0, 1.0, 10.0, 5.0], [1.0]*4, ot.IdentityMatrix(4))
->>> # We create a 'usual' RandomVector from the Distribution
->>> vect = ot.RandomVector(myDistribution)
->>> # We create a composite random vector
->>> output = ot.CompositeRandomVector(myFunction, vect)
->>> # We create an Event from this RandomVector
->>> myEvent = ot.ThresholdEvent(output, ot.Less(), -3.0)
->>> # We create a DirectionalSampling algorithm
->>> myAlgo = ot.DirectionalSampling(myEvent, ot.MediumSafe(), ot.OrthogonalDirection())
+>>> input_RV = ot.RandomVector(myDistribution)
+>>> output_RV = ot.CompositeRandomVector(myFunction, input_RV)
+
+Create the event :math:`\cD_f = \{\vect{x} \in \Rset^{\inputDim} \, | \,\model(\vect{x}) \leq -3.0\}`:
+
+>>> threshold = -3.0
+>>> event = ot.ThresholdEvent(output_RV, ot.Less(), -3.0)
+
+Create the directional sampling algorithm and the convergence criteria: 
+
+>>> myAlgo = ot.DirectionalSampling(event, ot.MediumSafe(), ot.OrthogonalDirection())
 >>> myAlgo.setMaximumOuterSampling(150)
 >>> myAlgo.setBlockSize(4)
 >>> myAlgo.setMaximumCoefficientOfVariation(0.1)
 >>> # Perform the simulation
+
+Run the algorithm and extract the estimated probability:
+
 >>> myAlgo.run()
 >>> print('Probability estimate=%.6f' % myAlgo.getResult().getProbabilityEstimate())
 Probability estimate=0.169716"
@@ -103,7 +138,8 @@ Probability estimate=0.169716"
 Returns
 -------
 strategy : :class:`~openturns.RootStrategy`
-    Root strategy adopted."
+    Root strategy used to evaluate the frontiers of
+    the event along each direction in the standard space."
 
 // ---------------------------------------------------------------------
 
@@ -113,7 +149,8 @@ strategy : :class:`~openturns.RootStrategy`
 Parameters
 ----------
 strategy : :class:`~openturns.RootStrategy`
-    Root strategy adopted."
+    Root strategy to evaluate the frontiers of
+    the event along each direction in the standard space."
 
 // ---------------------------------------------------------------------
 
@@ -123,7 +160,8 @@ strategy : :class:`~openturns.RootStrategy`
 Returns
 -------
 strategy : :class:`~openturns.SamplingStrategy`
-    Direction sampling strategy adopted."
+    Direction sampling strategy used to sample
+    directions in the standard space."
 
 // ---------------------------------------------------------------------
 
@@ -133,4 +171,5 @@ strategy : :class:`~openturns.SamplingStrategy`
 Parameters
 ----------
 strategy : :class:`~openturns.SamplingStrategy`
-    Direction sampling strategy adopted."
+    Direction sampling strategy used
+    to sample directions in the standard space."
