--- a/python/src/LinearEvaluation_doc.i.in
+++ b/python/src/LinearEvaluation_doc.i.in
@@ -10,26 +10,44 @@ constant : sequence of float
 linear : :class:`~openturns.Matrix`
     Matrix :math:`\mat{A}`.
 
+Notes
+-----
+This class implements a linear :class:`~openturns.Function` :math:`f` defined as:
+
+.. math::
+
+    f : & \Rset^d \rightarrow \Rset^p  \\
+        & \vect{X} \mapsto \Tr{\mat{A}} ( \vect{X} - \vect{b} ) + \vect{c}
+
+where:
+
+- :math:`\mat{A}` is a matrix with :math:`d` lines and :math:`p` columns,
+- :math:`\vect{b}` is a vector in  :math:`\Rset^d`,
+- :math:`\vect{c}` is a vector in :math:`\Rset^p`.
+
 See also
 --------
 Function
 
-Notes
------
-This implements a linear :class:`~openturns.Function` :math:`f` 
-defined as :
+Examples
+--------
+In this example, we create the linear function :math:`f: \Rset^2 \rightarrow \Rset` such that
+:math:`f(x,y) = 2x + 3y-1`. Then we have:
 
 .. math::
 
-    f : & \Rset^n \rightarrow \Rset^p  \\
-        & \vect{X} \mapsto \mat{A} ( \vect{X} - \vect{b} ) + \vect{c}
+    \mat{A} = \left( \begin{array}{cc}
+    2  \\
+    3
+    \end{array}\right), \vect{b} = \Tr{(0,0)}, \vect{c} = (-1)
 
-where:
-
-- :math:`\mat{A}` is the :math:`\Rset^p \times \Rset^n` matrix defined by the
-  input *linear*
-- :math:`\vect{b}` is the :math:`\Rset^n` vector defined by the object *center*
-- :math:`\vect{c}` is the :math:`\Rset^p` vector defined by the object *constant*."
+>>> import openturns as ot
+>>> A = ot.Matrix(2,1)
+>>> A[0,0] = 2
+>>> A[1,0] = 3
+>>> b = [2.0, 3.0]
+>>> c = [4.0]
+>>> f = ot.LinearEvaluation(b,c,A)"
 
 // ---------------------------------------------------------------------
 
