--- a/python/src/QuadraticFunction_doc.i.in
+++ b/python/src/QuadraticFunction_doc.i.in
@@ -14,33 +14,68 @@ quadratic : :class:`~openturns.SymmetricTensor`
 
 Notes
 -----
-This implements a quadratic function :math:`f` defined as:
+This class implements a quadratic function :math:`f` defined as:
 
 .. math::
 
-    f : & \Rset^n \rightarrow \Rset^p  \\
-        & \vect{X} \mapsto \mat{A} ( \vect{X} - \vect{b} ) + \vect{c} + \frac{1}{2} \vect{X}^T \times \underline{\underline{\underline{M}}} \times \vect{X}
+    f : & \Rset^d \rightarrow \Rset^p  \\
+        & \vect{X} \mapsto \Tr{\mat{A}} ( \vect{X} - \vect{b} ) + \vect{c} + \frac{1}{2} \vect{X}^T \times \underline{\underline{\underline{M}}} \times \vect{X}
 
 where:
 
-- :math:`\mat{A}` is the :math:`\Rset^p \times \Rset^n` matrix defined by *linear*,
-
-- :math:`\vect{b}` is the :math:`\Rset^n` vector defined by *center*,
-
-- :math:`\vect{c}` is the :math:`\Rset^p` vector defined by *constant*.
-
-- :math:`\underline{\underline{\underline{M}}}` is a :math:`\Rset^p \times \Rset^n \times \Rset^n` symmetric tensor defined by *quadratic*.
+- :math:`\mat{A}` is a matrix with :math:`d` lines and :math:`d` columns,
+- :math:`\vect{b}` is a vector in :math:`\Rset^d`,
+- :math:`\vect{c}` is a  vector in :math:`\Rset^p`,
+- :math:`\underline{\underline{\underline{M}}}` is a :math:`\Rset^p \times \Rset^d \times \Rset^d` symmetric
+  tensor.
 
 Examples
 --------
+In this example, we create the linear function :math:`f: \Rset^2 \rightarrow \Rset^2`
+such that:
+
+.. math::
+
+    \mat{A} = \left( \begin{array}{cc}
+    1 & 2 \\
+    3 & 4
+    \end{array}\right), \vect{b} = \Tr{(0,0)}, \vect{c} = (0)
+
+and:
+
+.. math::
+
+    \underline{\underline{\underline{M}}}_{:,:,0} = \left( \begin{array}{cc}
+    5 & 6 \\
+    7 & 8
+    \end{array}\right),
+
+    \underline{\underline{\underline{M}}}_{:,:,1} = \left( \begin{array}{cc}
+    9 & 10 \\
+    11 & 12
+    \end{array}\right).
+
+
 >>> import openturns as ot
->>> inputDimension = 3
->>> outputDimension = 2
->>> center = [1.0] * inputDimension
->>> constant = [-1.0, 2.0]
->>> linear = ot.Matrix(inputDimension, outputDimension)
->>> quadratic = ot.SymmetricTensor(inputDimension, outputDimension)
+>>> d = 2
+>>> p = 2
+>>> center = [0.0] * d
+>>> constant = [0.0] * p
+>>> linear = ot.Matrix(d, p)
+>>> linear[0,0] = 1.0
+>>> linear[0,1] = 2.0
+>>> linear[1,0] = 3.0
+>>> linear[1,1] = 4.0
+>>> quadratic = ot.SymmetricTensor(d, p)
+>>> quadratic[0,0,0] = 5
+>>> quadratic[0,1,0] = 6
+>>> quadratic[1,0,0] = 7
+>>> quadratic[1,1,0] = 8
+>>> quadratic[0,0,1] = 9
+>>> quadratic[0,1,1] = 10
+>>> quadratic[1,0,1] = 11
+>>> quadratic[1,1,1] = 12
 >>> function = ot.QuadraticFunction(center, constant, linear, quadratic)
->>> inP = [7.0, 8.0, 9.0]
+>>> inP = [1.0, 2.0]
 >>> print(function(inP))
-[-1,2]"
+[39.5,60.5]"
