CMake: Fail if there is no analytical parser

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -219,6 +219,9 @@ if (USE_EXPRTK)
   set (OPENTURNS_HAVE_ANALYTICAL_PARSER TRUE)
   set (SYMBOLICPARSER_DEFAULT_BACKEND ExprTk)
 endif ()
+if (NOT OPENTURNS_HAVE_ANALYTICAL_PARSER)
+  message(FATAL_ERROR "Analytical paser required, please enable either USE_MUPARSER or USE_EXPRTK")
+endif ()
 
 if (USE_HMAT)
   find_package (HMAT 1.7 CONFIG)
