--- a/lib/src/Base/Func/CMakeLists.txt
+++ b/lib/src/Base/Func/CMakeLists.txt
@@ -25,6 +25,8 @@ ot_add_source_file (ComposedFunction.cxx)
 ot_add_source_file (ComposedGradient.cxx)
 ot_add_source_file (ComposedHessian.cxx)
 ot_add_source_file (ConstantBasisFactory.cxx)
+ot_add_source_file (ConstantEvaluation.cxx)
+ot_add_source_file (ConstantFunction.cxx)
 ot_add_source_file (DatabaseFunction.cxx)
 ot_add_source_file (DatabaseEvaluation.cxx)
 ot_add_source_file (DistanceToDomainEvaluation.cxx)
@@ -260,6 +262,8 @@ ot_install_header_file (InverseTrendEvaluation.hxx)
 ot_install_header_file (InverseTrendTransform.hxx)
 ot_install_header_file (BasisFactory.hxx)
 ot_install_header_file (ConstantBasisFactory.hxx)
+ot_install_header_file (ConstantEvaluation.hxx)
+ot_install_header_file (ConstantFunction.hxx)
 ot_install_header_file (LinearBasisFactory.hxx)
 ot_install_header_file (QuadraticBasisFactory.hxx)
 ot_install_header_file (ParametricEvaluation.hxx)
