RankSobolSA: Add missing experimental warning

--- a/python/src/RankSobolSensitivityAlgorithm_doc.i.in
+++ b/python/src/RankSobolSensitivityAlgorithm_doc.i.in
@@ -1,6 +1,10 @@
 %feature("docstring") OT::RankSobolSensitivityAlgorithm
 "Sensitivity analysis using rank-based method.
 
+.. warning::
+    This class is experimental and likely to be modified in future releases.
+    To use it, import the ``openturns.experimental`` submodule.
+
 Parameters
 ----------
 inputDesign : :class:`~openturns.Sample`
