--- a/lib/etc/openturns.conf.in
+++ b/lib/etc/openturns.conf.in
@@ -328,8 +328,8 @@
   <!-- OT::GaussLegendre parameters -->
   <GaussLegendre-DefaultMarginalIntegrationPointsNumber value_int="64" />
 
-  <!-- OT::Fejer parameters -->
-  <FejerAlgorithm-DefaultMarginalIntegrationPointsNumber  value_int="64" />
+  <!-- OT::FejerExperiment parameters -->
+  <FejerExperiment-DefaultMarginalNodesNumber value_int="64" />
 
   <!-- OT::IteratedQuadrature parameters -->
   <IteratedQuadrature-MaximumError            value_float="1.0e-7" />
