--- a/python/src/FejerAlgorithm_doc.i.in
+++ b/python/src/FejerAlgorithm_doc.i.in
@@ -1,6 +1,22 @@
 %feature("docstring") OT::FejerAlgorithm
 "Fejer Integration algorithm
 
+The FejerAlgorithm algorithm enables to approximate the definite integral:
+
+.. math::
+
+    \int_{\vect{a}}^\vect{b} f(\vect{t})\di{\vect{t}}
+
+with :math:`f: \Rset^d \mapsto \Rset^p`, :math:`\vect{a}, \vect{b}\in\Rset^d` using a the approximation:
+
+.. math::
+
+    \int_{\vect{a}}^\vect{b} f(\vect{t})\di{\vect{t}} = \sum_{\vect{n}\in \cN}\left(\prod_{i=1}^d w^{N_i}_{n_i}\right)f(\xi^{N_1}_{n_1},\dots,\xi^{N_d}_{n_d})
+
+where :math:`\xi^{N_i}_{n_i}` is the :math:`n_i` -th node of the :math:`N_i` points and :math:`w^{N_i}_{n_i}` are the associated weight.
+
+Refer to :class:`~openturns.experimental.FejerExperiment` for the expression of nodes and weights.
+
 Available constructors:
     FejerAlgorithm(*dimension, method*)
 
@@ -18,75 +34,9 @@ method : int, optional
 
     Default is `ot.FejerAlgorithm.CLENSHAWCURTIS`
 
-Notes
------
-The FejerAlgorithm algorithm enables to approximate the definite integral:
-
-.. math::
-
-    \int_{\vect{a}}^\vect{b} f(\vect{t})\di{\vect{t}}
-
-with :math:`f: \Rset^d \mapsto \Rset^p`, :math:`\vect{a}, \vect{b}\in\Rset^d` using a the approximation:
-
-.. math::
-
-    \int_{\vect{a}}^\vect{b} f(\vect{t})\di{\vect{t}} = \sum_{\vect{n}\in \cN}\left(\prod_{i=1}^d w^{N_i}_{n_i}\right)f(\xi^{N_1}_{n_1},\dots,\xi^{N_d}_{n_d})
-
-where :math:`\xi^{N_i}_{n_i}` is the :math:`n_i` -th node of the :math:`N_i` points and :math:`w^{N_i}_{n_i}` are the associated weight.
-
-For any :math:`k=0,1,...,n-1`, let :math:`\theta_k = \dfrac{k\pi}{n}`. 
-The Clenshaw-Curtis nodes are:
-
-.. math::
-
-    x_k = \cos(\theta_k)
-
-for any :math:`k=0,1,...,n-1` and its associated weights are:
-
-.. math::
-
-    w_k = \dfrac{c_k}{n}\left(1-\sum_{j=1}^{\lfloor n/2\rfloor}\dfrac{b_j}{4j^2-1}\cos\left(2j\theta_k\right)\right)
-
-where:
-
-.. math::
-
-    b_j = 
-    \begin{cases}
-    2 & \textrm{ if } j < n/2, \\
-    1 & \textrm{ otherwise},
-    \end{cases}
-
-and:
-
-.. math::
-
-    c_k = 
-    \begin{cases}
-    1 & \textrm{ if } k = 0 \textrm{ or } n - 1, \\
-    2 & \textrm{ otherwise}.
-    \end{cases}
-
-The type-1 Fejer quadrature rule uses the nodes:
-
-.. math::
-
-    x_k = \cos(\theta_{k + 1/2})
-
-for any :math:`k=0,1,...,n-1` and the associated weights are:
-
-.. math::
-
-    w_k = \dfrac{2}{n}\left(1-2\sum_{j=1}^{\lfloor n/2\rfloor}\dfrac{1}{4j^2-1}\cos\left(j\theta_{2k+1}\right)\right)
-
-Finally, the type-2 Fejer quadrature rule is very close to the Clenshaw-Curtis rule. The two methods share the same
-nodes (except the endpoints that are set to `0` within the `Fejer` method).  The weights of the type-2 Fejer quadrature rule are:
-
-.. math::
-
-    w_k=\dfrac{4}{n+1}\sin\theta_k\sum_{j=1}^{\lfloor n/2\rfloor}\dfrac{\sin\left((2j-1)\theta_k\right)}{2j-1}
-
-for any :math:`k=0,1,...,n-1`.
+See Also
+--------
+openturns.experimental.FejerExperiment
 
 Examples
 --------
