--- a/python/src/WeightedExperiment_doc.i.in
+++ b/python/src/WeightedExperiment_doc.i.in
@@ -16,3 +16,5 @@ OT_WeightedExperiment_setSize_doc
 OT_WeightedExperiment_hasUniformWeights_doc
 %feature("docstring") OT::WeightedExperiment::isRandom
 OT_WeightedExperiment_isRandom_doc
+%feature("docstring") OT::WeightedExperiment::setLevels
+OT_WeightedExperiment_setLevels_doc
